--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "jest-expo": "^22.0.0",
+    "react-native-easy-grid": "^0.1.15",
     "react-test-renderer": "16.0.0-beta.5"
   },
   "main": "node_modules/expo/AppEntry.js",
