:sparkles: feat(AJX): Make an AJAX request

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "android": {
       "package": "com.lenovo.turns"
     },
-    "name": "turns",
+    "name": "Lenovo turns",
     "slug": "turns",
     "version": "0.1.0",
     "isDetached": true,
